[project]
name = "btester"
version = "0.0.2"
authors = [
  { name="Paweł Knioła", email="pawel.kn@gmail.com" },
]
description = "Python framework optimized for running backtests on multiple assetss"
keywords = [
  "python", "python3", "quantitative", "analysis", "backtesting", "portfolio", "parallel", "algorithmic", "trading"
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.7",      #Specify which python versions that you want to support
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dependencies = [
  "pandas>=0.22"
]

[project.urls]
"Homepage" = "https://github.com/pawelkn/btester"
"Bug Tracker" = "https://github.com/pawelkn/btester/issues"